--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "fastify": "4.21.0",
+    "knex": "2.5.1",
+    "sqlite3": "5.1.6",
     "zod": "3.21.4"
   },
   "devDependencies": {
