--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "knex": "node --no-warnings --loader tsx ./node_modules/knex/bin/cli.js --knexfile ./knexfile.ts",
+    "dev": "tsx watch src/server.ts",
+    "lint": "eslint src --ext.ts --fix",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.4.5",
+    "@types/supertest": "2.0.12",
     "supertest": "6.3.3",
     "tsx": "3.12.7",
     "typescript": "5.1.6",
